made some major changes, changed/added some classes, worked on the userinterface too